Fetch matching indices every pass.
The previous behaviour would stop tailing logs when using
syslog-%Y-%m-%d style indexes.

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 elasticsearch:
   url: "http://10.0.4.205:9200/"
-  index: "filebeat-7.1.*"
-  match: "Failed password for root from ([^ ]+)"
+  index: "syslog-*"
+  match: "Failed password for (?:root|invalid user [^ ]+) from ([^ ]+)"
   check_frequency: 1s
 timeout: 1h
 threshold: 5
